# AI-Debug-Assistant

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
data/public_docs/: sources.md
data/synthetic/: debug_cases.json
docs/: architecture.md  aws-eks-architecture.md  aws-teardown-and-cost-control.md  aws-validation-checklist.md  data-policy.md  demo-script.md  evaluation.md  kubernetes-components-visual.md  learning-retrospective.md  local-kubernetes-kind.md  manual-testing.md
infra/: Dockerfile.api  docker-compose.yml
infra/k8s/: alembic-migration-job.yaml  api-deployment.yaml  api-service.yaml  configmap.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml  worker-deployment.yaml
infra/observability/: grafana-values.local.yml  prometheus-values.local.yaml
scripts/: ci_compose_smoke.py  ci_k8s_smoke.py  push-api-image-to-ecr.ps1
specs/: README.md
specs/001-enterprise-ai-debug-assistant/: plan.md  spec.md  tasks.md
specs/phase-1-ssd-planning-hardening/: plan.md  spec.md  tasks.md
specs/phase-2-persistence-pgvector/: plan.md  spec.md  tasks.md
specs/phase-3-ingestion-workers/: plan.md  spec.md  tasks.md
specs/phase-4-evaluation-quality-gates/: plan.md  spec.md  tasks.md
specs/phase-5-observability/: plan.md  spec.md  tasks.md
specs/phase-6-container-ci-validation/: plan.md  spec.md  tasks.md
specs/phase-7-devops-ready-milestone/: plan.md  spec.md  tasks.md
(+110 files in other folders)
