[project]
name = "enterprise-ai-debug-assistant"
version = "0.1.0"
description = "Portfolio-grade production AI Engineering project for grounded enterprise debugging workflows."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "rq>=1.16.0",
  "python-multipart>=0.0.9",
  "structlog>=24.0.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
pythonpath = ["apps/api"]

[tool.setuptools.packages.find]
where = ["apps/api"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = []
ignore_missing_imports = true
strict = true
